[metadata]
name = tb-ml
version = attr: tb_ml.__version__
description = A standardised approach to predicting resistance using machine learning
author = Jody Phelan, Julian Libiseller-Egger
license = GPL3
classifiers =
    Programming Language :: Python :: 3.9

[options]
packages = tb_ml
install_requires =
    pandas
    numpy
python_requires = >=3.9
zip_safe = False

[options.entry_points]
console_scripts = 
    tb-ml = tb_ml.__main__:main